css/main.css
/* ... */
.post-body h3 {
  border-bottom: 1px dotted #f5f7f9;
}
@media (min-width: 768px) and (max-width: 991px) {
  .main-inner {
    padding: 10px;
  }
  .posts-expand .post-button {
    margin-top: 20px;
  }
  .post-block {
    padding: 20px;
  }
  .comments {
    padding: 10px 20px;
  }
}
@media (max-width: 767px) {
  .main-inner {
    padding: 8px;
  }
  .posts-expand .post-button {
    margin: 12px 0;
  }
  .post-block {
    padding: 12px;
  }
  .comments {
    padding: 10px 12px;
  }
}
@font-face {
  font-family: "GuDianMingChaoTi";
  src: url("../fonts/GuDianMingChaoTi.eot"); /* IE9 */
  src: url("../fonts/GuDianMingChaoTi.eot?#iefix") format("embedded-opentype"), url("../fonts/GuDianMingChaoTi.woff") format("woff"), url("../fonts/GuDianMingChaoTi.ttf") format("truetype"), url("../fonts/GuDianMingChaoTi.svg#WenYue GuDianMingChaoTi (Non-Commercial Use) W5") format("svg"); /* iOS 4.1- */
  font-style: normal;
  font-weight: normal;
}
@font-face {
  font-family: "ZHJXinWeiTi";
  src: url("ZHJXinWeiTi.eot"); /* IE9 */
  src: url("../fonts/ZHJXinWeiTi.eot?#iefix") format("embedded-opentype"), url("../fonts/ZHJXinWeiTi.woff") format("woff"), url("../fonts/ZHJXinWeiTi.ttf") format("truetype"), url("../fonts/ZHJXinWeiTi.svg#WenYue ZHJXinWeiTi (Non-Commercial Use)") format("svg"); /* iOS 4.1- */
  font-style: normal;
  font-weight: normal;
}
.site-title {
  font-family: "GuDianMingChaoTi";
  font-weight: normal;
  font-size: 22px;
}
.site-subtitle {
  font-family: "GuDianMingChaoTi";
  font-weight: normal;
  font-size: 22px;
  color: #fff;
}
.site-author-name {
  font-family: "ZHJXinWeiTi";
  font-weight: normal;
}
.post-copyright ul,
.followme {
  border-radius: 0.3rem;
}
blockquote {
  border-radius: 0.3rem;
}
.btn {
  border-radius: 0.3rem;
}
.back-to-top {
  border-radius: 0.3rem;
  font-size: 0.85rem;
}
.back-to-top:hover {
  background: #8a6bbe;
  color: #fff;
}
.posts-expand .post-tags a {
  border-radius: 0.3rem;
}
::-webkit-scrollbar-thumb {
  border-radius: 0.2rem;
}
::-webkit-scrollbar-thumb:hover {
  border-radius: 0.2rem;
}
.site-overview {
  text-align: center;
}
canvas#canvas {
  margin-top: 20px;
}
#site-days {
  display: inline-block;
  font-size: 13px;
  text-align: center;
  vertical-align: middle;
  margin-top: 10px;
  margin-left: 10px;
  margin-right: 10px;
  margin-bottom: 10px;
  color: #999;
  border-bottom-color: #555;
}
code {
  color: #cb1b45;
  background: #fcfaf2;
  font-size: 1em;
}
.bg_content {
  position: fixed;
  top: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
}
::-webkit-scrollbar {
  width: 0.5rem;
  height: 0.5rem;
}
::-webkit-scrollbar-thumb {
  background-color: rgba(0,0,0,0.2);
}
::-webkit-scrollbar-thumb:hover {
  background-color: #8a6bbe;
}
.site-meta {
  background: #66327c;
}
.post-body p a,
.post-body ul a,
.post-body h2 a,
.post-copyright a,
.links-of-author-item a {
  color: #0b346e;
}
.post-body p a:hover,
.post-body ul a:hover,
.post-body h2 a:hover,
.post-copyright a:hover,
.links-of-author-item a:hover {
  color: #005caf;
}
a.theme-link,
a.host-link {
  color: #999;
}
a.theme-link:hover,
a.host-link:hover {
  color: #005caf;
}
.post-body p a,
.post-body ul a,
.post-body h2 a,
.post-copyright a {
  border-bottom: none;
  position: relative;
}
.post-body p a::before,
.post-body ul a::before,
.post-body h2 a::before,
.post-copyright a::before {
  background: #005caf;
  bottom: -2px;
  content: '';
  height: 1.8px;
  color: #005caf;
  left: 0;
  position: absolute;
  transform: scaleX(0);
  transition: transform 0.2s ease-in-out;
  width: 100%;
}
.post-body p a:hover::before,
.post-body ul a:hover::before,
.post-body h2 a:hover::before,
.post-copyright a:hover::before {
  transform: scaleX(1);
}
.posts-expand .post-tags a {
  border: 0.1em solid #f17c67;
  padding: 0.25em;
  line-height: 1.2em;
  background: #c73e3a;
  color: #fff;
  font-size: 16px;
}
.posts-expand .post-tags a:hover {
  box-shadow: 0 0 1em 0.5em #f8c3cd;
}
.posts-expand .post-tags a:nth-child(2n) {
  border: 0.1em solid #86c166;
  background: #227d51;
}
.posts-expand .post-tags a:nth-child(2n):hover {
  box-shadow: 0 0 1em 0.5em #a8d8b9;
}
.posts-expand .post-tags a:nth-child(3n) {
  border: 0.1em solid #005caf;
  background: #113285;
}
.posts-expand .post-tags a:nth-child(3n):hover {
  box-shadow: 0 0 1em 0.5em #81c7d4;
}
.posts-expand .post-tags a:nth-child(4n) {
  border: 0.1em solid #db8e71;
  background: #b35c37;
}
.posts-expand .post-tags a:nth-child(4n):hover {
  box-shadow: 0 0 1em 0.5em #ffba84;
}
.posts-expand .post-body img {
  border: none;
}
.text-right {
  text-align: right;
}
.text-center {
  text-align: center;
}
ol.footnotes-list {
  list-style-type: decimal-leading-zero;
}
ol.footnotes-list > li.footnote-item::marker {
  color: #0b346e;
}
ul.category-list > li {
  list-style-type: disc;
}
.site-brand-container {
  padding: 0 0;
}
.site-nav-toggle,
.site-nav-right {
  background: #66327c;
}
.katex {
  font-size: 1.1em !important;
}
#busuanzi_container_site_uv,
#busuanzi_container_site_pv,
#busuanzi_container_page_pv {
  display: inline !important;
}
.site-title:hover,
.site-subtitle:hover {
  animation: shake-it 0.5s reverse infinite cubic-bezier(0.68, -0.55, 0.27, 1.55);
}
@media (prefers-color-scheme: dark) {
  .post-body p a,
  .post-body ul a,
  .post-body h2 a,
  .post-copyright a,
  .links-of-author-item a {
    color: #2ea9df;
  }
  .exturl {
    color: #2ea9df;
  }
}
.post-body .label.success {
  background: #a8d8b9;
}
div .popular-posts-date {
  display: inline-block;
}
div .popular-posts-title {
  display: inline-block;
  margin-left: 5px !important;
}
div .popular-posts-excerpt {
  display: none;
}
@-moz-keyframes shake-it {
  0% {
    text-shadow: 0 0 rgba(0,255,255,0.5), 0 0 rgba(255,0,0,0.5);
  }
  25% {
    text-shadow: -2px 0 rgba(0,255,255,0.5), 2px 0 rgba(255,0,0,0.5);
  }
  50% {
    text-shadow: -5px 0 rgba(0,255,255,0.5), 3px 0 rgba(255,0,0,0.5);
  }
  100% {
    text-shadow: 3px 0 rgba(0,255,255,0.5), 5px 0 rgba(255,0,0,0.5);
  }
}
/* ... */

